# stretch_show_tablet

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md  package.xml  requirements.txt  setup.py
stretch_show_tablet/: CMakeLists.txt  package.xml  setup.cfg  setup.py
stretch_show_tablet/launch/: demo_show_tablet.launch.py  multi_camera.launch.py  record_data.py  test_estimate_pose.launch.py  test_head_tracker.launch.py  test_perception.launch.py  test_perception_toggleable.launch.py  test_show_tablet.launch.py  test_show_tablet_server.launch.py  test_track_head_server.launch.py
stretch_show_tablet/stretch_show_tablet/: control.py  demo_show_tablet_action.py  demo_show_tablet_actions.py  detect_body_landmarks.py  detect_faces.py  detect_faces_gripper.py  estimate_pose_server.py  human.py  plan_tablet_pose_service.py  planner.py  planner_helpers.py  planner_service_test.py  plot_tools.py  record_test_data.py  show_tablet_client.py  show_tablet_server.py  show_tablet_test.py  stretch_main.py  track_head.py  track_head_server.py  workspace_intersection_modeling.py  workspace_modeling.py
stretch_show_tablet/testing/: test_human.py  test_imports.py  test_planner.py
stretch_show_tablet/workspace_characterization/: workspace_intersection_modeling.py  workspace_modeling.py
stretch_tablet/: CMakeLists.txt  control.py  detect_body_landmarks.py  detect_faces.py  detect_faces_gripper.py  human.py  kinematics.py  package.xml  planner.py  plot_tools.py  record_test_data.py  setup.cfg  setup.py  show_tablet_test.py  stretch_main.py  toggleable_detection_node.py  track_head.py  workspace_intersection_modeling.py  workspace_modeling.py
stretch_tablet/launch/: demo_show_tablet.launch.py  estimate_pose_test.launch.py  multi_camera.launch.py  record_data.py  show_tablet_test_launch.py  test_estimate_pose.launch.py  test_head_tracker.launch.py  test_low_res_body_detection.py  test_perception.launch.py  test_perception_toggleable.launch.py  test_show_tablet.launch.py  (+3 more)
(+45 files in other folders)
