<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stretch_show_tablet</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hello-robot@todo.todo">hello-robot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>python-pytorch-pip</depend>
  <depend>python3-seaborn</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>stretch_show_tablet_interfaces</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
